# Archivator

./: CMakeLists.txt  README.md  main.cpp
docs/: args.txt
molules/: ParserCLI.cpp  args_parser.cpp  compressor.cpp
molules/inc/: ParserCLI.h
src/: main.cpp
src/modules/: ParserCLI.cpp  Settings.cpp
src/modules/inc/: Interfaces.h  ParserCLI.h  XArc.h
src/molules/: Settings.cpp
src/molules/inc/: XArc.h
tests/units/: testParserCLI.cpp
